Revise Flink ingestion pipeline setup instructions
Updated the Flink ingestion pipeline instructions in README.